--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Jason Ansel
+title: Jing Xu
 #tagline:          A short tagline
 #description:      Describe your website.
 #Comment out url when working locally to resolve base urls correctly
@@ -6,7 +6,7 @@ url: http://jasonansel.com
 
 # Owner/author information
 owner:
-  name:           Jason Ansel
+  name:           Jing Xu （Joy）
   avatar:         jasonansel.jpg
 #  bio:
   email:          jasonansel@jasonansel.com
