--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ owner:
   name:           Jing Xu （Joy）
   avatar:         jasonansel.jpg
 #  bio:
-  email:          jasonansel@jasonansel.com
+  email:          joyxy_95@qq.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
-  github: jansel
+  github: joy1314
   linkedin: jansel
   scholar: https://scholar.google.com/citations?user=jDNYtP0AAAAJ
   instagram:
