--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Jing Xu
 #tagline:          A short tagline
 #description:      Describe your website.
 #Comment out url when working locally to resolve base urls correctly
-url: http://jasonansel.com
+url: http://joy1314.github.io
 
 # Owner/author information
 owner:
