--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ owner:
   name:           Jing Xu （Joy）
   avatar:         jasonansel.jpg
 #  bio:
-  email:          joyxy_95@qq.com
+  email:          joyxu_95@qq.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
