--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   facebook:
   github: joy1314
   linkedin: jansel
-  scholar: https://scholar.google.com/citations?user=jDNYtP0AAAAJ
+  scholar: https://scholar.google.com/citations?hl=zh-CN&view_op=list_works&gmla=AJsN-F65v1H2qOWUYykhUcJRmJHL_qGFxd36XzbAUqpnbc8VpPUgOwzmM4Q8Tm4JOqOOfML15n_OYDJAsw0j3I59sfVuy5mCgX_Sx11YG0-uSaHA4WVJAmc&user=oEvieAoAAAAJ
   instagram:
   lastfm:
   tumblr:
