--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: http://joy1314.github.io
 # Owner/author information
 owner:
   name:           Jing Xu （Joy）
-  avatar:         jasonansel.jpg
+  avatar:         joy_1.jpg
 #  bio:
   email:          joy1314bubian@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
