--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: http://joy1314.github.io
 owner:
   name:           Jing Xu （Joy）
   avatar:         joy_2.jpg
-  bio:            CV
+  #bio:            
   email:          joy1314bubian@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
